<resources>
    <string name="app_name">Gh Group</string>
    <string name="header_name">Vendor Portal</string>
    <string name="welcome">Welcome to GH Group</string>
    <string name="cbs_title">Powered By :</string>
    <string name="enter_code">Enter Your Code</string>
    <string name="enter_otp">Enter OTP </string>
    <string name="get_otp">Get OTP</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="company_name">Cogniscient Business Solutions Pvt.Ltd</string>
    <string name="vendor">Vendor Portal</string>
    <string name="customer">Customer Portal</string>
    <string name="order">Order Form</string>
    <string name="customer_balance">Customer Balance</string>
    <string name="order_report">Order Report</string>
    <string name="gh_billing">GH Billing</string>
    <string name="dashboard">Dashboard</string>
    <string name="net">Internet/wi-fi not available</string>
    <string name="gh_billings">Gh Billing</string>
    <string name="direct_billing">Direct Billing</string>
    <string name="direct_billings">Direct Billing</string>
    <string name="contact_details">Contact Details</string>
    <string name="contact_detail">Contact Details</string>
    <string name="user_management">User Management</string>
    <string name="user_managements">User Management</string>
    <string name="order_form">Order Entry Form</string>
    <string name="pending_bill">Pending Bills</string>
    <string name="gh_ageing">GH Ageing Details</string>
    <string name="direct_ageing">Direct Ageing Details</string>
    <string name="Pay_BillToBill">Pay Bill To Bill</string>
    <string name="GH_Billing">GH Billing Pay Now</string>
    <string name="receipt_register">Receipt Register</string>
    <string name="sale_register">Sale Register</string>
    <string name="debit_note_register">Debit Note Register</string>
    <string name="bill_register">Bill Register</string>
    <string name="payment_communication">Payment Comm Register</string>
    <string name="direct_pending">Direct Pending Bills</string>
    <string name="pdf_details">General Ledger Details</string>
    <string name="comm_pdf_details">Comm General Ledger Details</string>
    <string name="PendingBill_Details">Pending Bill Details</string>
    <string name="creditRegister_details">Credit Register Details</string>
    <string name="g_r_register">G/R Register</string>
    <string name="payment_register">Payment Register</string>
    <string name="user_registration">User Registration</string>
    <string name="access_rights">Access Rights</string>
    <string name="contacts">Contacts</string>
    <string name="gH_ledger">GH Ledger</string>
    <string name="purchase_register">Purchase Register</string>
    <string name="vendor_portal_gh_group">Vendor Portal GH Group</string>
    <string name="gh_group">GH GROUP</string>
    <string name="show_color_hint">GREEN SHOWS CREDIT RED SHOWS DEBIT</string>
    <string name="my_profile">My Profile</string>
    <string name="general_ledger">General Ledger</string>
    <string name="comm_general_ledger">Comm General Ledger</string>
    <string name="from_date">From Date</string>
    <string name="up_date">UP To Date</string>
    <string name="enter_vendor_code">Enter Vendor Code</string>
    <string name="enter_Customer_code">Enter Customer Code</string>
    <string name="search">Search</string>
    <string name="branch">Branch</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="to_date">To Date</string>
    <string name="credit_note_register">Credit Note Register</string>
    <string name="customer_code">Customer Code</string>
    <string name="vendor_code">Vendor Code</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="gh_bill_graph">GH Billing Graph</string>
    <string name="graph_details">Graph Details</string>
    <string name="gh_ageing_graph">GH Ageing Graph</string>
    <string name="direct_ageing_graph">Direct Ageing Graph</string>
    <string name="direct_bill_graph">Direct Billing Graph</string>
    <string name="graph_dash">Graph Dashboard</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="lr_no">LR No</string>
    <string name="trans_name">Trans Name</string>
    <string name="l_r_date">LR Date</string>
    <string name="no_of_parcels">NO Of Parcels</string>
    <string name="downlod">Downlod</string>
    <string name="excel">Excel</string>
    <string name="pdf">PDF</string>
    <string name="view_pdf">View pdf</string>
    <string name="download">Download</string>
    <string name="view_downloads">View Downloads</string>
    <string name="start_download">Start Download</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="ahmedabad_contact_address">563/3, Khodi Ambli,Swaminarayan Mandir,Kalupur,Ahmedabad-380001(Gujarat)</string>
    <string name="banglour_contact_address">No.9, 9th Cross, Opp:Temple Tree Hotel, Wilson Garden, Bangaluru-560027 (Karnataka)</string>
    <string name="indore_contact_address">New No.230, Old No. 100 Siremal Bafna Marg, Imli Bazar, Indore-452007 (Madhya Pradesh)</string>
    <string name="jabalpur_contact_address">No.797, Satna Building, Super Market, Near Malviya Chowk, Jabalpur-482002 (Madhya Pradesh)</string>
    <!--<string name="jaipur_contact_address">No.2561 2nd Floor, Ram Bhawan, Choura Rasta, Jaipur-302003 (Rajasthan)</string>-->
    <string name="jaipur_contact_address">690-B, MADAN JANKI KUNJ FRONTIER COLONY, AADARSH NAGAR JAIPUR- 302004</string>
    <string name="kanpur_contact_address">53/3, Shambhu Kripa Market, Flat No.206, 2nd Floor, Naya Ganj, Kanpur-208001 (Uttar Pradesh)</string>
    <!--<string name="kolkata_contact_address">52,Zakaria Street, 3rd Floor opp. md ali park Kolkata- 700073 West Bengal</string>-->
    <string name="kolkata_contact_address">161, CHITTARANJAN AVENUE, 2ND FLOOR, Kolkata, WEST BENGAL – 700007</string>
    <!--<string name="ludhiana_contact_address">3814/1, Street No.10, Jain Colony, Sunder Nagar, Ludhiana-141007 (Punjab)</string>-->
    <string name="ludhiana_contact_address">B-24, House No.4663, Street No.6, Jain Colony, Sunder Nagar, Ludhiana – 141007 (Punjab)</string>
    <string name="mumbai_contact_address">404-06, Royal Avenue, Near Gaiwadi Church, DR. Viegus Street, Kalbadevi, Mumbai-400002 (Maharashtra)</string>
    <string name="nagpur_contact_address">No.1152, 2nd Floor, C.A Road, Near Saini Travels, Gandhi Bagh, Nagpur-440002 (Maharashtra)</string>
    <!--<string name="delhi_gandhinagar_contact_address">Gandhinagar -9/6118, 2nd Floor Main Road, Opp: ICICI Bank, Delhi-110031</string>-->
    <string name="delhi_gandhinagar_contact_address">9/6118 2nd floor, Opposite Telephone Exchange Main Road, Gandhi Nagar, Delhi - 110031</string>
    <!--<string name="delhi_tankroad_contact_address">Tank Road - 11798, 2nd Floor Sat Nagar, Tank Road, Karol Bagh, New Delhi-110005</string>-->
    <string name="delhi_tankroad_contact_address">16B/3, FF, D.B. Gupta Road, Karol Bagh, New Delhi-110005</string>
    <string name="surat_contact_address">C-204, Shree Kuberji Textiles Park-1, Near Belgium Square, Surat-395002 (Gujrat)</string>
    <!--<string name="tirupur_contact_address">No.16, Chittappa Avenue, Royapuram, Main Road, Tirupur-641601 (Tamil Nadu)</string>-->
    <string name="tirupur_contact_address">D.No.30(1), Ranganatha Puram Extension, 3rd Street, Royapuram, Tirupur-641601 (Tamil Nadu)</string>
    <string name="ulhasnagar_contact_address">Dev Prakash Arcade, 1st Floor, BK. No.1938, Gas Gpdpwn Road, O.T Section, Ulhasnagar-421005</string>
    <string name="panipat_contact_address">H No - 515, Part 2, Huda, Sector 12, Panipat, Haryana - 132103 ,\nContact Number \n+91 7678423200</string>
    <string name="amravati_contact_address">HARI OM TOWER # 23/1 DESHNA NAGAR CHATRI TALAV ROAD NEAR BAJAJ CHILDREN HOSPITAL AMRAVATI - 444606</string>
    <string name="pay_now">Pay Now</string>
    <string name="round_payment">Round Payment</string>


</resources>