<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:id="@+id/customPage"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Vchar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vchr Type"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toRightOf="@id/tv_Vchar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toRightOf="@id/tv_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_VcharNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="vchr Number"
            android:textColor="@color/black" />
        <TextView
            android:layout_toEndOf="@id/tv_VcharNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toEndOf="@id/tv_Branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toEndOf="@id/tv_Debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toEndOf="@id/tv_Credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendor_name"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toEndOf="@id/tv_Vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_LRNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lr_no"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toEndOf="@id/tv_LRNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_TransName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_name"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toEndOf="@id/tv_TransName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_LRDATE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_r_date"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toEndOf="@id/tv_LRDATE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_NOParcels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_parcels"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toEndOf="@id/tv_NOParcels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Downlod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downlod"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_toRightOf="@id/tv_Downlod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_PDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btn_excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/btn_PDF"
            android:text="@string/excel"
            />
        </RelativeLayout>

    </RelativeLayout>








</LinearLayout>