<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CustomerGenLedger">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:id="@+id/ll_date_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_date"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:padding="4dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/tv_customer_formDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:background="@drawable/edit_text_design"

                    android:hint="@string/dd_mm_yyyy" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_date"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:padding="4dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/tv_customer_ToDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_design"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:hint="@string/dd_mm_yyyy"
                    />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_code"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="4dp"
                android:textStyle="normal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#EAE7E7"
                android:padding="10dp"
                android:hint="@string/enter_Customer_code"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/branch"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="4dp"
                android:textStyle="normal" />

            <Spinner
                android:id="@+id/customer_spinner_Branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_customer_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_design"
            android:text="@string/search"
            android:textColor="@android:color/white" />


    </LinearLayout>

</LinearLayout>