<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.DashBoardActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/gray_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_Vendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/search_button_design"
                android:padding="30dp"
                android:text="@string/vendor"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_Customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/search_button_design"
                android:padding="30dp"
                android:text="@string/customer"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_OrderForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/search_button_design"
                android:padding="30dp"
                android:text="@string/order"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

</layout>